syntax = "proto3";

import "ai/lzy/v1/common/data-scheme.proto";
import "ai/lzy/v1/whiteboard/whiteboard.proto";

package ai.lzy.v1;

option java_outer_classname = "LWBPS";
option java_package = "ai.lzy.v1.whiteboard";

service LzyWhiteboardPrivateService {
  rpc CreateWhiteboard (CreateWhiteboardRequest) returns (CreateWhiteboardResponse);
  rpc FinalizeField (FinalizeFieldRequest) returns (FinalizeFieldResponse);
  rpc FinalizeWhiteboard (FinalizeWhiteboardRequest) returns (FinalizeWhiteboardResponse);
}

message CreateWhiteboardRequest {
  string userId = 1;
  string whiteboardName = 2;
  repeated WhiteboardFieldInfo fields = 3;
  Storage storage = 4;
  repeated string tags = 5;
  string namespace = 6;
}

message CreateWhiteboardResponse {
  Whiteboard whiteboard = 1;
}

message FinalizeFieldRequest {
  string whiteboardId = 1;
  string fieldName = 2;
  string storageUri = 3;
  DataScheme scheme = 4;
}

message FinalizeFieldResponse {
}

message FinalizeWhiteboardRequest {
  string whiteboardId = 1;
}

message FinalizeWhiteboardResponse {
}
